<resources>
    <string name="app_name">FARMobile</string>
    <string name="main_barcode">Barcode</string>
    <string name="main_kafkabroker">Kafka Broker</string>
    <string name="setting_kafkatopic">Kafka Topic</string>
    <string name="setting_ip">Add IP</string>
    <string name="setting_addip">Add IP</string>
    <string name="setting_connect">Connect</string>
    <string name="main_setting">Setting</string>
    <string name="rowip_ip">192.168.1.1</string>
    <string name="setting_notify_invalid_ip">Invalid IP Address!</string>
</resources>
