<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <EditText
        android:id="@+id/edittext_setting_broker"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/colorAccent"
        android:gravity="center_vertical"
        android:hint="@string/main_kafkabroker"
        android:paddingLeft="@dimen/dp_5"
        android:textSize="@dimen/sp_15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_setting_topic"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/colorAccent"
        android:gravity="center_vertical"
        android:hint="@string/setting_kafkatopic"
        android:paddingLeft="@dimen/dp_5"
        android:textSize="@dimen/sp_15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_setting_broker" />

    <EditText
        android:id="@+id/edittext_setting_ip"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/colorAccent"
        android:gravity="center_vertical"
        android:hint="@string/setting_ip"
        android:paddingLeft="@dimen/dp_5"
        android:textSize="@dimen/sp_15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_setting_topic" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_setting_iplist"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_setting_ip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_5"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_setting_addip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/setting_addip"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/button_setting_connect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/setting_connect" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
